feat: add bug report page and modernize styles
- add dedicated bug submission instructions and sitemap entry

- refresh landing experience with updated styling

Related to task 5.6-5.7 in PRD 0001

--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,9 @@
   <main class="container policy">
     <h1>Support</h1>
     <p>For help with <strong>Math Drills</strong>, email us at <a href="mailto:mathdrillsapp.petunia922@passinbox.com">mathdrillsapp.petunia922@passinbox.com</a>.</p>
+
+    <h2>Report a Bug</h2>
+    <p>Found an issue? Visit our <a href="/bugs.html">bug report page</a> for the exact details we need.</p>
   </main>
 
   <footer class="container footer">
