--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li><a href="/privacy.html">Privacy Policy</a></li>
         <li><a href="/terms.html">Terms of Service</a></li>
         <li><a href="/contact.html">Support</a></li>
+        <li><a href="/bugs.html">Report a Bug</a></li>
       </ul>
     </section>
   </main>
