feat: improve accessibility navigation
- add skip links and main landmarks across pages

- update styling to support skip link focus state

Related to task 5.4 in PRD 0001

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <link rel="stylesheet" href="/assets/styles.css" />
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to main content</a>
   <header class="container">
     <nav class="nav" aria-label="Primary">
-      <a class="brand" href="/">Skill Joy LLC</a>
+      <a class="brand" href="/" aria-current="page">Skill Joy LLC</a>
       <div class="links">
         <a href="/privacy.html">Privacy</a>
         <a href="/terms.html">Terms</a>
@@ -23,7 +24,7 @@
     </nav>
   </header>
 
-  <main class="container">
+  <main id="main" class="container">
     <section class="hero">
       <h1>Math Drills</h1>
       <p>Simple, fast, and private. No data leaves your device.</p>
