--- a/privacy.html
+++ b/privacy.html
@@ -8,6 +8,7 @@
   <meta name="robots" content="index,follow" />
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to main content</a>
   <header class="container">
     <nav class="nav" aria-label="Primary">
       <a class="brand" href="/">Skill Joy LLC</a>
@@ -19,7 +20,7 @@
     </nav>
   </header>
 
-  <main class="container policy">
+  <main id="main" class="container policy">
     <h1>Privacy Policy</h1>
     <p><strong>Effective date:</strong> October 29, 2025</p>
 
