--- a/terms.html
+++ b/terms.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/assets/styles.css" />
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to main content</a>
   <header class="container">
     <nav class="nav" aria-label="Primary">
       <a class="brand" href="/">Skill Joy LLC</a>
@@ -18,7 +19,7 @@
     </nav>
   </header>
 
-  <main class="container policy">
+  <main id="main" class="container policy">
     <h1>Terms of Service</h1>
     <p><strong>Effective date:</strong> October 29, 2025</p>
 
