--- a/bugs.html
+++ b/bugs.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/assets/styles.css" />
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to main content</a>
   <header class="container">
     <nav class="nav" aria-label="Primary">
       <a class="brand" href="/">Skill Joy LLC</a>
@@ -18,7 +19,7 @@
     </nav>
   </header>
 
-  <main class="container policy">
+  <main id="main" class="container policy">
     <h1>Report a Bug</h1>
     <p>If you encounter an issue with <strong>Math Drills</strong>, we want to know so we can fix it quickly.</p>
 
