--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/assets/styles.css" />
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to main content</a>
   <header class="container">
     <nav class="nav" aria-label="Primary">
       <a class="brand" href="/">Skill Joy LLC</a>
@@ -18,7 +19,7 @@
     </nav>
   </header>
 
-  <main class="container policy">
+  <main id="main" class="container policy">
     <h1>Support</h1>
     <p>For help with <strong>Math Drills</strong>, email us at <a href="mailto:mathdrillsapp.petunia922@passinbox.com">mathdrillsapp.petunia922@passinbox.com</a>.</p>
 
