fix: correct internal links for gh pages
- switch nav and callout links to relative paths

- keep modern styling applied across pages

Related to PRD 0001 deployment QA

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <a class="skip-link" href="#main">Skip to main content</a>
   <header class="container">
     <nav class="nav" aria-label="Primary">
-      <a class="brand" href="/" aria-current="page">Skill Joy LLC</a>
+      <a class="brand" href="." aria-current="page">Skill Joy LLC</a>
       <div class="links">
-        <a href="/privacy.html">Privacy</a>
-        <a href="/terms.html">Terms</a>
-        <a href="/contact.html">Contact</a>
+        <a href="privacy.html">Privacy</a>
+        <a href="terms.html">Terms</a>
+        <a href="contact.html">Contact</a>
       </div>
     </nav>
   </header>
@@ -45,10 +45,10 @@
     <section class="links">
       <h2>Links</h2>
       <ul>
-        <li><a href="/privacy.html">Privacy Policy</a></li>
-        <li><a href="/terms.html">Terms of Service</a></li>
-        <li><a href="/contact.html">Support</a></li>
-        <li><a href="/bugs.html">Report a Bug</a></li>
+        <li><a href="privacy.html">Privacy Policy</a></li>
+        <li><a href="terms.html">Terms of Service</a></li>
+        <li><a href="contact.html">Support</a></li>
+        <li><a href="bugs.html">Report a Bug</a></li>
       </ul>
     </section>
   </main>
