--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,11 @@
   <a class="skip-link" href="#main">Skip to main content</a>
   <header class="container">
     <nav class="nav" aria-label="Primary">
-      <a class="brand" href="/">Skill Joy LLC</a>
+      <a class="brand" href=".">Skill Joy LLC</a>
       <div class="links">
-        <a href="/privacy.html">Privacy</a>
-        <a href="/terms.html">Terms</a>
-        <a href="/contact.html" aria-current="page">Contact</a>
+        <a href="privacy.html">Privacy</a>
+        <a href="terms.html">Terms</a>
+        <a href="contact.html" aria-current="page">Contact</a>
       </div>
     </nav>
   </header>
