fix: load styles correctly on gh pages
- use relative asset paths and remove temporary skip link

- ensure navigation uses index.html as home link

Addresses live styling regression

--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Support — Math Drills</title>
-  <link rel="stylesheet" href="/assets/styles.css" />
+  <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to main content</a>
   <header class="container">
     <nav class="nav" aria-label="Primary">
-      <a class="brand" href=".">Skill Joy LLC</a>
+      <a class="brand" href="index.html">Skill Joy LLC</a>
       <div class="links">
         <a href="privacy.html">Privacy</a>
         <a href="terms.html">Terms</a>
