--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   <meta property="og:title" content="Math Drills — Official Site" />
   <meta property="og:description" content="Simple, fast, and private. No data leaves your device." />
   <meta property="og:type" content="website" />
-  <link rel="icon" href="/favicon.ico" />
-  <link rel="stylesheet" href="/assets/styles.css" />
+  <link rel="icon" href="favicon.ico" />
+  <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to main content</a>
   <header class="container">
     <nav class="nav" aria-label="Primary">
-      <a class="brand" href="." aria-current="page">Skill Joy LLC</a>
+      <a class="brand" href="index.html" aria-current="page">Skill Joy LLC</a>
       <div class="links">
         <a href="privacy.html">Privacy</a>
         <a href="terms.html">Terms</a>
