--- a/privacy.html
+++ b/privacy.html
@@ -4,14 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Privacy Policy — Math Drills</title>
-  <link rel="stylesheet" href="/assets/styles.css" />
+  <link rel="stylesheet" href="assets/styles.css" />
   <meta name="robots" content="index,follow" />
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to main content</a>
   <header class="container">
     <nav class="nav" aria-label="Primary">
-      <a class="brand" href=".">Skill Joy LLC</a>
+      <a class="brand" href="index.html">Skill Joy LLC</a>
       <div class="links">
         <a href="privacy.html" aria-current="page">Privacy</a>
         <a href="terms.html">Terms</a>
