fix: add bug report link to nav
Ensures bug report page is accessible from every header

--- a/bugs.html
+++ b/bugs.html
@@ -14,6 +14,7 @@
         <a href="privacy.html">Privacy</a>
         <a href="terms.html">Terms</a>
         <a href="contact.html">Contact</a>
+        <a href="bugs.html" aria-current="page">Report a Bug</a>
       </div>
     </nav>
   </header>
