--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
         <a href="privacy.html">Privacy</a>
         <a href="terms.html">Terms</a>
         <a href="contact.html" aria-current="page">Contact</a>
+        <a href="bugs.html">Report a Bug</a>
       </div>
     </nav>
   </header>
