--- a/privacy.html
+++ b/privacy.html
@@ -15,6 +15,7 @@
         <a href="privacy.html" aria-current="page">Privacy</a>
         <a href="terms.html">Terms</a>
         <a href="contact.html">Contact</a>
+        <a href="bugs.html">Report a Bug</a>
       </div>
     </nav>
   </header>
