--- a/index.html
+++ b/index.html
@@ -19,36 +19,65 @@
         <a href="privacy.html">Privacy</a>
         <a href="terms.html">Terms</a>
         <a href="contact.html">Contact</a>
+        <a href="bugs.html">Report a Bug</a>
       </div>
     </nav>
   </header>
 
   <main id="main" class="container">
-    <section class="hero">
-      <h1>Math Drills</h1>
-      <p>Simple, fast, and private. No data leaves your device.</p>
-      <div class="cta" role="group" aria-label="Primary actions">
-        <a class="button" href="https://apps.apple.com/app/id6754544345" rel="noopener">Download on the App Store</a>
+    <section class="card hero">
+      <span class="hero-badge">Math Drills App</span>
+      <h1>Practice math. Built for focus.</h1>
+      <p class="hero-subtitle">Simple, fast, and private skill drills for students and lifelong learners. Nothing leaves your device.</p>
+      <div class="hero-cta" role="group" aria-label="Primary actions">
+        <a class="button button-primary" href="https://apps.apple.com/app/id6754544345" rel="noopener">Download on the App Store</a>
+      </div>
+      <div class="hero-footer">
+        <span>On-device only • No accounts • Works offline</span>
       </div>
     </section>
 
-    <section class="features">
+    <section class="card feature-section">
       <h2>Why Math Drills</h2>
-      <ul>
-        <li>📱 Works offline — focus without distractions.</li>
-        <li>🔒 Private by design — data stays on your device.</li>
-        <li>⚡ Fast and simple — made for quick practice.</li>
-      </ul>
+      <div class="feature-grid">
+        <article class="feature-card">
+          <span class="icon">📱</span>
+          <h3>Offline first</h3>
+          <p>Run lessons anywhere without logins or bandwidth distractions.</p>
+        </article>
+        <article class="feature-card">
+          <span class="icon">🔒</span>
+          <h3>Privacy by design</h3>
+          <p>We never transmit data. Everything is stored locally on the device.</p>
+        </article>
+        <article class="feature-card">
+          <span class="icon">⚡</span>
+          <h3>Fast and focused</h3>
+          <p>Launch a session in seconds so learners can stay in the flow.</p>
+        </article>
+      </div>
     </section>
 
-    <section class="links">
+    <section class="card links-card">
       <h2>Links</h2>
-      <ul>
-        <li><a href="privacy.html">Privacy Policy</a></li>
-        <li><a href="terms.html">Terms of Service</a></li>
-        <li><a href="contact.html">Support</a></li>
-        <li><a href="bugs.html">Report a Bug</a></li>
-      </ul>
+      <div class="link-grid">
+        <a class="link-tile" href="privacy.html">
+          Privacy Policy
+          <span>How we protect data.</span>
+        </a>
+        <a class="link-tile" href="terms.html">
+          Terms of Service
+          <span>Usage guidelines.</span>
+        </a>
+        <a class="link-tile" href="contact.html">
+          Support
+          <span>Get help anytime.</span>
+        </a>
+        <a class="link-tile" href="bugs.html">
+          Report a Bug
+          <span>Share feedback with the team.</span>
+        </a>
+      </div>
     </section>
   </main>
 
