--- a/terms.html
+++ b/terms.html
@@ -14,6 +14,7 @@
         <a href="privacy.html">Privacy</a>
         <a href="terms.html" aria-current="page">Terms</a>
         <a href="contact.html">Contact</a>
+        <a href="bugs.html">Report a Bug</a>
       </div>
     </nav>
   </header>
