chore: tidy assets and update favicon references
- move favicon into assets/ and update all page heads

- remove unused adaptive and splash icons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Math Drills — Official Site" />
   <meta property="og:description" content="Simple, fast, and private. No data leaves your device." />
   <meta property="og:type" content="website" />
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="assets/favicon.ico" />
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
@@ -29,6 +29,7 @@
       <span class="hero-badge">Math Drills App</span>
       <h1>Practice math. Built for focus.</h1>
       <p class="hero-subtitle">Simple, fast, and private skill drills for students and lifelong learners. Nothing leaves your device.</p>
+      <img class="hero-illustration" src="assets/icon.png" alt="Friendly cat teaching a math lesson" />
       <div class="hero-cta" role="group" aria-label="Primary actions">
         <a class="button button-primary" href="https://apps.apple.com/app/id6754544345" rel="noopener">Download on the App Store</a>
       </div>
