--- a/privacy.html
+++ b/privacy.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Privacy Policy — Math Drills</title>
-  <meta name="description" content="Privacy Policy for Math Drills by Skill Joy LLC. No data collection, no servers, on-device only.">
-  <meta name="robots" content="index,follow" />
+  <link rel="icon" href="assets/favicon.ico" />
   <link rel="stylesheet" href="assets/styles.css" />
+  <meta name="robots" content="index,follow" />
+  <meta name="description" content="Privacy Policy for Math Drills by Skill Joy LLC. No data collection, no servers, on-device only." />
 </head>
 <body>
   <header class="container">
@@ -22,60 +23,53 @@
   </header>
 
   <main id="main" class="container policy">
-    <h1>Privacy Policy</h1>
+    <h1>Terms of Service</h1>
     <p><strong>Effective date:</strong> October 29, 2025</p>
 
-    <h2>1. Who We Are</h2>
-    <p><strong>Skill Joy LLC</strong> (“<strong>we</strong>,” “<strong>our</strong>,” or “<strong>us</strong>”) publishes the <strong>Math Drills</strong> mobile application (the “<strong>App</strong>”). This Privacy Policy explains our privacy practices for the App.</p>
+    <h2>1. Acceptance of Terms</h2>
+    <p>By downloading, installing, accessing, or using <strong>Math Drills</strong> (the “App”), you agree to be bound by these Terms. If you do not agree, you may not use the App.</p>
 
-    <h2>2. Summary</h2>
+    <h2>2. Relationship to Apple Terms</h2>
+    <p>If you obtained the App from Apple’s App Store, your use of the App is also governed by Apple’s Licensed Application End User License Agreement (the “Apple Standard EULA”). If these Terms conflict with the Apple Standard EULA, the Apple Standard EULA controls to the extent of the conflict.</p>
+
+    <h2>3. License</h2>
+    <p>Subject to these Terms, <strong>Skill Joy LLC</strong> grants you a limited, non-exclusive, non-transferable, revocable license to use the App for personal, non-commercial purposes.</p>
+
+    <h2>4. User Content & Data</h2>
+    <p>All data created within the App is stored locally on your device. We do not access, store, or transmit your data. You are responsible for securing your device and any backups (e.g., iCloud).</p>
+
+    <h2>5. Prohibited Uses</h2>
     <ul>
-      <li><strong>No collection:</strong> We do not collect, track, sell, rent, or share personal data through the App.</li>
-      <li><strong>No servers:</strong> The App does not connect to or operate any servers owned or controlled by us.</li>
-      <li><strong>On-device only:</strong> All App functionality runs locally on your device; App data remains on your device under your control.</li>
-      <li><strong>No ads or analytics SDKs:</strong> The App contains no advertising, analytics, or social media SDKs.</li>
+      <li>Reverse engineering, decompiling, disassembling, or modifying the App.</li>
+      <li>Using the App in violation of applicable law or third-party rights.</li>
     </ul>
 
-    <h2>3. Data We Collect</h2>
-    <p><strong>None via the App.</strong> The App does not collect personal information, usage analytics, device identifiers (including IDFA), cookies, or similar tracking technologies.</p>
+    <h2>6. Changes to the App</h2>
+    <p>We may modify, suspend, or discontinue the App (or any feature) at any time without notice.</p>
 
-    <h2>4. On-Device Processing & Storage</h2>
-    <p>The App processes and stores data (e.g., practice progress or settings) locally on your device. We do not transmit this data to us or to third parties. You can delete App data by uninstalling the App or using any in-App reset controls (if provided).</p>
+    <h2>7. Disclaimers</h2>
+    <p>TO THE MAXIMUM EXTENT PERMITTED BY LAW, THE APP IS PROVIDED “AS IS” AND “AS AVAILABLE,” WITHOUT WARRANTIES OF ANY KIND, WHETHER EXPRESS, IMPLIED, OR STATUTORY, INCLUDING, WITHOUT LIMITATION, WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, TITLE, AND NON-INFRINGEMENT. We do not warrant that the App will be error-free or uninterrupted, or that defects will be corrected.</p>
 
-    <h2>5. Platform-Level Diagnostics (Apple)</h2>
-    <p>Apple may gather device and crash diagnostics at the operating-system level if you opt in to share analytics with app developers. If Apple makes anonymized crash information available to us, it does not identify you and we do not combine it with other information. Apple’s collection and sharing of such diagnostics are governed by Apple’s terms, privacy policy, and your device settings—not by this policy.</p>
+    <h2>8. Limitation of Liability</h2>
+    <p>TO THE MAXIMUM EXTENT PERMITTED BY LAW, IN NO EVENT WILL <strong>SKILL JOY LLC</strong> BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, EXEMPLARY, OR PUNITIVE DAMAGES, OR ANY LOSS OF PROFITS, REVENUE, DATA, OR USE, ARISING OUT OF OR RELATED TO THE APP OR THESE TERMS, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGES. TO THE EXTENT LIABILITY CANNOT BE EXCLUDED, IT SHALL BE LIMITED TO THE GREATER OF (A) THE AMOUNT YOU PAID FOR THE APP (IF ANY), OR (B) USD $10. NOTHING HEREIN LIMITS LIABILITY FOR FRAUD, WILLFUL MISCONDUCT, OR OTHER LIABILITY THAT CANNOT BE LIMITED BY LAW.</p>
 
-    <h2>6. Third-Party Services & SDKs</h2>
-    <p>The App does not integrate third-party analytics, advertising, or social SDKs. We do not “sell” or “share” personal information as those terms are defined under applicable privacy laws (e.g., CCPA/CPRA).</p>
+    <h2>9. Indemnification</h2>
+    <p>You agree to indemnify and hold harmless <strong>Skill Joy LLC</strong> from and against any claims, losses, liabilities, damages, and expenses (including reasonable attorneys’ fees) arising out of or related to your misuse of the App or your breach of these Terms.</p>
 
-    <h2>7. Support & Voluntary Communications</h2>
-    <p>If you contact us (for example via <a href="mailto:mathdrillsapp.petunia922@passinbox.com">email</a>), we will receive the information you choose to provide (e.g., message content, screenshots, device details). We use it solely to respond and then delete it once no longer needed. If you later submit information through any web form we provide, this policy will be updated before such collection begins.</p>
+    <h2>10. Termination</h2>
+    <p>We may suspend or terminate your access to the App at any time. Upon termination, the license granted in Section 3 ends and you must stop using and, if applicable, delete the App.</p>
 
-    <h2>8. Children’s Privacy</h2>
-    <p>The App is intended for a general audience and is not directed to children under 13. We do not knowingly collect personal information from children. If you believe a child provided personal information to us, contact us and we will delete it.</p>
+    <h2>11. Changes to These Terms</h2>
+    <p>We may update these Terms from time to time. Material changes will be posted in the App or on our website with an updated effective date. Your continued use after changes become effective constitutes acceptance.</p>
 
-    <h2>9. International Users (e.g., GDPR/UK GDPR)</h2>
-    <p>We do not process personal data via the App. If you email us, we process your message only to respond (our legitimate interest). You may request deletion of your correspondence by contacting us.</p>
+    <h2>12. Governing Law</h2>
+    <p>These Terms are governed by the laws of <strong>Colorado, USA</strong> (update to your chosen jurisdiction), without regard to conflict-of-law rules. Venue and jurisdiction lie exclusively in the state and federal courts located in that jurisdiction.</p>
 
-    <h2>10. California Privacy (CCPA/CPRA)</h2>
-    <p>We do not collect personal information via the App; we do not sell or share personal information; and we do not collect sensitive personal information via the App. If you email us, you may request access to and deletion of the content you provided.</p>
-
-    <h2>11. Security</h2>
-    <p>Because App data remains on your device, you control its security (e.g., device passcode, Face/Touch ID, encrypted backups). Keep your device software current and protect access to your device and backups.</p>
-
-    <h2>12. Retention</h2>
-    <p>We do not retain App-collected personal information (there is none). Any support emails are retained only as long as necessary to address your request and are then deleted.</p>
-
-    <h2>13. Changes to This Policy</h2>
-    <p>If future App versions introduce network features or data collection, we will update this policy and our App Store privacy disclosures before release. Material changes will be reflected here with a new effective date.</p>
+    <h2>13. Severability; Entire Agreement</h2>
+    <p>If any provision is held unenforceable, it will be limited or eliminated to the minimum extent necessary, and the remaining provisions will remain in full force. These Terms constitute the entire agreement between you and us regarding the App, in addition to the Apple Standard EULA where applicable.</p>
 
     <h2>14. Contact</h2>
     <p>Email: <a href="mailto:mathdrillsapp.petunia922@passinbox.com">mathdrillsapp.petunia922@passinbox.com</a><br>Skill Joy LLC — Colorado, USA</p>
-
-    <h2>15. Legal Notices & Disclaimers</h2>
-    <p><strong>No Warranties.</strong> TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, THE APP IS PROVIDED “AS IS” AND “AS AVAILABLE,” WITHOUT WARRANTIES OF ANY KIND, WHETHER EXPRESS, IMPLIED, OR STATUTORY, INCLUDING WITHOUT LIMITATION ANY WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, TITLE, AND NON-INFRINGEMENT.</p>
-    <p><strong>Limitation of Liability.</strong> TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, IN NO EVENT WILL SKILL JOY LLC BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, EXEMPLARY, OR PUNITIVE DAMAGES, OR ANY LOSS OF PROFITS, REVENUE, DATA, OR USE, ARISING OUT OF OR RELATED TO THE APP OR THIS POLICY, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGES. TO THE EXTENT LIABILITY CANNOT BE EXCLUDED, IT SHALL BE LIMITED TO THE GREATER OF (A) THE AMOUNT YOU PAID FOR THE APP (IF ANY), OR (B) USD $10.</p>
-    <p><strong>Consumer Rights.</strong> Nothing in this policy is intended to limit rights you may have under applicable law. Some jurisdictions do not allow certain disclaimers or limitations; in those jurisdictions, such disclaimers or limitations apply only to the extent permitted by law.</p>
   </main>
 
   <footer class="container footer">
