refactor: move content pages into pages directory
- relocate privacy, terms, contact, and bug report pages under pages/

- update navigation, sitemap, and README links

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <nav class="nav" aria-label="Primary">
       <a class="brand" href="index.html" aria-current="page">Skill Joy LLC</a>
       <div class="links">
-        <a href="privacy.html">Privacy</a>
-        <a href="terms.html">Terms</a>
-        <a href="contact.html">Contact</a>
-        <a href="bugs.html">Report a Bug</a>
+        <a href="pages/privacy.html">Privacy</a>
+        <a href="pages/terms.html">Terms</a>
+        <a href="pages/contact.html">Contact</a>
+        <a href="pages/bugs.html">Report a Bug</a>
       </div>
     </nav>
   </header>
@@ -62,19 +62,19 @@
     <section class="card links-card">
       <h2>Links</h2>
       <div class="link-grid">
-        <a class="link-tile" href="privacy.html">
+        <a class="link-tile" href="pages/privacy.html">
           Privacy Policy
           <span>How we protect data.</span>
         </a>
-        <a class="link-tile" href="terms.html">
+        <a class="link-tile" href="pages/terms.html">
           Terms of Service
           <span>Usage guidelines.</span>
         </a>
-        <a class="link-tile" href="contact.html">
+        <a class="link-tile" href="pages/contact.html">
           Support
           <span>Get help anytime.</span>
         </a>
-        <a class="link-tile" href="bugs.html">
+        <a class="link-tile" href="pages/bugs.html">
           Report a Bug
           <span>Share feedback with the team.</span>
         </a>
