--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <main id="main" class="container">
     <section class="card hero">
       <span class="hero-badge">Math Drills App</span>
-      <h1>Practice math. Built for focus.</h1>
+      <h1>Practice math. Built for focus. No advertisements.</h1>
       <p class="hero-subtitle">Simple, fast, and private skill drills for students and lifelong learners. Nothing leaves your device.</p>
       <img class="hero-illustration" src="assets/icon.png" alt="Friendly cat teaching a math lesson" />
       <div class="hero-cta" role="group" aria-label="Primary actions">
